W02 Home Page Enhancement complete

--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Emmanuel Benjamin | WDD 130</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD130 Home Page for Emmychizzy042 - Web Development course projects and assignments.">
+    <title>WDD130 | Home Page</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
     <header>
-      <nav>
-        <a href="#">Home</a>
-        <a href="wwr/">Rafting Website</a>
-      </nav>
+        <h1>Welcome to My WDD130 Website</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="week01/">Week 01</a></li>
+                <li><a href="week02/">Week 02</a></li>
+                <li><a href="week03/">Week 03</a></li>
+                <li><a href="week04/">Week 04</a></li>
+                <li><a href="week05/">Week 05</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-      <h1>Emmanuel Benjamin | WDD 130</h1>
-      <img src="images/profile.jpg" alt="Hello, my name is Emmanuel Benjamin" width="200">
-      <p>Hello! My name is Emmanuel Benjamin and I am studying web development. I enjoy learning new tech skills and exploring creative projects.</p>
+        <section>
+            <h2>About Me</h2>
+            <img src="images/profile.jpg" alt="Profile picture" width="200">
+            <p>Hello! My name is Emmanuel, and this is my home page for the WDD130 Web Development course. Here you’ll find all my weekly projects, assignments, and practice work.</p>
+        </section>
+
+        <section>
+            <h2>Course Content</h2>
+            <p>Use the navigation above to explore my weekly projects. Each folder contains the activities and assignments for that week.</p>
+        </section>
     </main>
+
     <footer>
-      <p>&copy; 2025 🌍 Emmanuel Benjamin 🌍 Nigeria</p>
+        <p>&copy; 2025 Emmanuel Benjamin | WDD130 Course</p>
     </footer>
-  </body>
+</body>
 </html>
