Final homepage update with images and styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD130 Home Page for Emmychizzy042 - Web Development course projects and assignments.">
+    <meta name="author" content="Emmanuel Benjamin">
     <title>WDD130 | Home Page</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -33,7 +34,15 @@
             <h2>Course Content</h2>
             <p>Use the navigation above to explore my weekly projects. Each folder contains the activities and assignments for that week.</p>
         </section>
+        
+        <aside>
+    <h2>Nigeria</h2>
+    <img src="images/nigeria.jpg" alt="Flag of Nigeria">
+    <p>Nigeria, known as the Giant of Africa, is a diverse nation rich in culture, music, and natural resources. It is home to over 200 million people.</p>
+</aside>
     </main>
+    
+
 
     <footer>
         <p>&copy; 2025 Emmanuel Benjamin | WDD130 Course</p>
