--- a/week03/index.html
+++ b/week03/index.html
@@ -3,41 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Home Page</title>
+  <meta name="description" content="WDD130 Week 3 Home Page Enhancement">
+  <meta name="author" content="Emmanuel Benjamin">
+  <title>WDD130 | Week 3 Home Page</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Home Page</h1>
+    <h1>Welcome to My WDD130 Website</h1>
     <nav>
       <a href="#">Home</a>
-      <a href="#">About</a>
+      <a href="#">Week 01</a>
+      <a href="#">Week 02</a>
+      <a href="#">Week 03</a>
+      <a href="#">Week 04</a>
+      <a href="#">Week 05</a>
       <a href="https://linkedin.com" target="_blank">LinkedIn</a>
       <a href="https://facebook.com" target="_blank">Facebook</a>
+      <a href="#">About Me</a>
     </nav>
   </header>
 
   <main>
-    <section>
-      <img src="profile.jpg" alt="My Profile Picture" class="profile">
-      <p>Hello! My name is [Your Name]. This is my personal home page for WDD130. 
-         I enjoy learning web development and creating new projects!</p>
-    </section>
+    <aside class="box">
+      <img src="profile.jpg" alt="Profile picture of Emmanuel">
+      <h2>Nigeria</h2>
+      <p>Profile picture</p>
+    </aside>
 
+    <p>
+      Hello! My name is Emmanuel, and this is my home page for the WDD130 Web Development course. 
+      Here you’ll find all my weekly projects, assignments, and practice work.
+    </p>
+
+    <h2>Course Content</h2>
+    <p>Use the navigation above to explore my weekly projects. Each folder contains the activities and assignments for that week.</p>
+
+    <!-- Temple List -->
     <ul class="box">
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra Ghana Temple</a></li>
       <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Aba Nigeria Temple</a></li>
-      <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple" target="_blank">Johannesburg South Africa Temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple" target="_blank">Accra Ghana Temple</a></li>
+      <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple" target="_blank">Salt Lake Temple</a></li>
     </ul>
   </main>
 
-  <aside class="box">
-    <img src="temple.jpg" alt="Beautiful Temple">
-    <h2>Nigeria</h2>
-  </aside>
-
   <footer>
-    <p>&copy; 2025 My Home Page</p>
+    <p>© 2025 Emmanuel Benjamin | WDD130 Course</p>
   </footer>
 </body>
 </html>
