Fixed main homepage and rafting site structure for WDD130

--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD130 Home Page for Emmychizzy042 - Web Development course projects and assignments.">
-    <meta name="author" content="Emmanuel Benjamin">
-    <title>WDD130 | Home Page</title>
-    <link rel="stylesheet" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Dry Oar Rafting Adventures - Experience thrilling river adventures with us!">
+  <meta name="author" content="Emmanuel Benjamin">
+  <title>Dry Oar Rafting Adventures | Home</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My WDD130 Website</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="week01/">Week 01</a></li>
-                <li><a href="week02/">Week 02</a></li>
-                <li><a href="week03/">Week 03</a></li>
-                <li><a href="week04/">Week 04</a></li>
-                <li><a href="week05/">Week 05</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <img src="images/logo.jpg" alt="Dry Oar Rafting Logo">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="wrr/index.html">Rivers</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <img src="images/profile.jpg" alt="Profile picture" width="200">
-            <p>Hello! My name is Emmanuel, and this is my home page for the WDD130 Web Development course. Here you’ll find all my weekly projects, assignments, and practice work.</p>
-        </section>
+  <div class="hero">
+    <img src="images/hero.jpg" alt="Rafting Adventure">
+    <h1>Welcome to Dry Oar Rafting Adventures</h1>
+    <article>
+      <img src="images/rafting1.jpg" alt="Rafting excitement">
+      <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
+    </article>
+  </div>
 
-        <section>
-            <h2>Course Content</h2>
-            <p>Use the navigation above to explore my weekly projects. Each folder contains the activities and assignments for that week.</p>
-        </section>
-        
-        <aside>
-    <h2>Nigeria</h2>
-    <img src="images/nigeria.jpg" alt="Flag of Nigeria">
-    <p>Nigeria, known as the Giant of Africa, is a diverse nation rich in culture, music, and natural resources. It is home to over 200 million people.</p>
-</aside>
-    </main>
-    
+  <section>
+    <h2>Why Choose Us?</h2>
+    <p>We provide top-notch guides, premium equipment, and unbeatable safety standards. Our goal is to give you memories that will last a lifetime!</p>
+  </section>
 
+  <section>
+    <h2>Plan Your Adventure</h2>
+    <p>Choose from a variety of river adventures tailored for different skill levels and group sizes. Let’s make your next trip one to remember!</p>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 Emmanuel Benjamin | WDD130 Course</p>
-    </footer>
+  <footer>
+    <p>© 2025 Dry Oar Rafting Adventures | Designed by Emmanuel Benjamin</p>
+    <div class="socialmedia">
+      <a href="#"><img src="images/rafting2.jpg" alt="Social icon"></a>
+      <a href="#"><img src="images/rafting3.jpg" alt="Social icon"></a>
+    </div>
+  </footer>
 </body>
 </html>
