--- a/index.html
+++ b/index.html
@@ -3,46 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Dry Oar Rafting Adventures - Experience thrilling river adventures with us!">
-  <meta name="author" content="Emmanuel Benjamin">
-  <title>Dry Oar Rafting Adventures | Home</title>
+  <title>Welcome to My WDD130 Website</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
-    <img src="images/logo.jpg" alt="Dry Oar Rafting Logo">
+    <h1>Welcome to My WDD130 Website</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="wrr/index.html">Rivers</a>
-      <a href="#">Contact</a>
+      <a href="#">Home</a>
+      <a href="wwr/index.html">WWR Site</a>
+      <a href="#">About Me</a>
     </nav>
   </header>
 
-  <div class="hero">
-    <img src="images/hero.jpg" alt="Rafting Adventure">
-    <h1>Welcome to Dry Oar Rafting Adventures</h1>
-    <article>
-      <img src="images/rafting1.jpg" alt="Rafting excitement">
-      <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
-    </article>
-  </div>
+  <main>
+    <section>
+      <img src="images/profile.jpg" alt="Profile picture" style="width:150px;border-radius:50%;">
+      <h2>Hello! My name is Emmanuel</h2>
+      <p>This is my home page for the WDD130 Web Development course. Here you’ll find all my weekly projects, assignments, and practice work.</p>
+    </section>
 
-  <section>
-    <h2>Why Choose Us?</h2>
-    <p>We provide top-notch guides, premium equipment, and unbeatable safety standards. Our goal is to give you memories that will last a lifetime!</p>
-  </section>
+    <section>
+      <h2>Course Content</h2>
+      <p>Use the navigation above to explore my weekly projects. Each folder contains the activities and assignments for that week.</p>
+    </section>
 
-  <section>
-    <h2>Plan Your Adventure</h2>
-    <p>Choose from a variety of river adventures tailored for different skill levels and group sizes. Let’s make your next trip one to remember!</p>
-  </section>
+    <section>
+      <h2>Nigeria</h2>
+      <img src="images/nigeria.jpg" alt="Flag of Nigeria" style="width:200px;">
+      <p>Nigeria, known as the Giant of Africa, is a diverse nation rich in culture, music, and natural resources. It is home to over 200 million people.</p>
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 Dry Oar Rafting Adventures | Designed by Emmanuel Benjamin</p>
-    <div class="socialmedia">
-      <a href="#"><img src="images/rafting2.jpg" alt="Social icon"></a>
-      <a href="#"><img src="images/rafting3.jpg" alt="Social icon"></a>
-    </div>
+    <p>© 2025 Emmanuel Benjamin | WDD130 Course</p>
   </footer>
 </body>
 </html>
