--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,52 +1,45 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to Dry Oar Rafting Adventures — experience the thrill of whitewater rafting in nature's beauty.">
-  <meta name="author" content="Emmanuel Benjamin">
-  <title>Home – Dry Oar Rafting Adventures</title>
-  <link rel="stylesheet" href="styles/rafting.css">
+  <title>Dry Oar Rafting Adventures</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Dry Oar Rafting Adventures logo">
+    <img src="images/logo.jpg" alt="Dry Oar Rafting Logo">
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
       <a href="trips.html">Trips</a>
       <a href="contact.html">Contact</a>
+      <a href="about.html">About</a>
     </nav>
   </header>
 
   <main>
-    <div class="hero">
-      <img src="images/hero.jpg" alt="Rafting adventure through the rapids">
-      <h1>Dry Oar Rafting Adventures</h1>
+    <section class="hero">
+      <img src="images/hero.jpg" alt="Rafting Adventure">
+      <h1>Welcome to Dry Oar Rafting Adventures</h1>
       <article>
-        <img src="images/happy-client.jpg" alt="Happy client rafting">
-        <p>Join us for an unforgettable adventure on some of the most exciting rivers around. Whether you’re a thrill-seeker or just love nature, we have a trip for you!</p>
+        <h3>Rafting Excitement</h3>
+        <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
       </article>
-    </div>
+    </section>
 
     <section>
-      <h2>Why Choose Us</h2>
-      <p>We provide safe, fun, and unforgettable rafting experiences for individuals, families, and groups of all skill levels.</p>
+      <h2>Why Choose Us?</h2>
+      <p>We provide top-notch guides, premium equipment, and unbeatable safety standards. Our goal is to give you memories that will last a lifetime!</p>
     </section>
 
     <section>
       <h2>Plan Your Adventure</h2>
-      <p>Check out our <a href="trips.html">Trips</a> page for available tours and pricing options, or <a href="contact.html">Contact Us</a> to learn more.</p>
+      <p>Choose from a variety of river adventures tailored for different skill levels and group sizes. Let’s make your next trip one to remember!</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Dry Oar Rafting Adventures | Emmanuel Benjamin</p>
-    <div class="socialmedia">
-      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-    </div>
+    <p>© 2025 Dry Oar Rafting Adventures | Designed by Emmanuel Benjamin</p>
   </footer>
 </body>
 </html>
