fixed image path

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,14 +18,14 @@
   </header>
 
   <main>
-    <section class="hero">
-      <img src="images/hero.jpg" alt="Rafting Adventure">
-      <h1>Welcome to Dry Oar Rafting Adventures</h1>
-      <article>
-        <h3>Rafting Excitement</h3>
-        <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
-      </article>
-    </section>
+  <section class="hero">
+    <h1>Welcome to Dry Oar Rafting Adventures</h1>
+    <article>
+      <h3>Rafting Excitement</h3>
+      <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
+    </article>
+  </section>
+</main>
 
     <section>
       <h2>Why Choose Us?</h2>
