--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Dry Oar Rafting offers thrilling white water adventures and unforgettable river experiences.">
+<meta name="author" content="Emmanuel Benjamin">
   <title>About | Dry Oar Rafting</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
   <header>
