--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Dry Oar Rafting offers thrilling white water adventures and unforgettable river experiences.">
+<meta name="author" content="Emmanuel Benjamin">
+
   <title>Dry Oar Rafting Adventures</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/rafting.css">
+
 </head>
 <body>
   <header>
@@ -17,13 +21,16 @@
     </nav>
   </header>
 
-  <main>
+ <main>
   <section class="hero">
-    <h1>Welcome to Dry Oar Rafting Adventures</h1>
-    <article>
-      <h3>Rafting Excitement</h3>
-      <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
-    </article>
+    <img src="images/hero.jpg" alt="Rafting adventure" class="hero-image">
+    <div class="hero-text">
+      <h1>Welcome to Dry Oar Rafting Adventures</h1>
+      <article>
+        <h3>Rafting Excitement</h3>
+        <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
+      </article>
+    </div>
   </section>
 </main>
 
