--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Dry Oar Rafting offers thrilling white water adventures and unforgettable river experiences.">
+<meta name="author" content="Emmanuel Benjamin">
   <title>Trips | Dry Oar Rafting</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/rafting.css">
+
 </head>
 <body>
   <header>
