--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <main>
     <section>
-      <img src="images/profile.jpg" alt="Profile picture" style="width:600px;border-radius:60%;">
+      <img src="images/profile.jpg" style="width:600px;border-radius:60%;">
       <h2>Hello! My name is Emmanuel</h2>
       <p>This is my home page for the WDD130 Web Development course. Here you’ll find all my weekly projects, assignments, and practice work.</p>
     </section>
@@ -30,7 +30,7 @@
 
     <section>
       <h2>Nigeria</h2>
-      <img src="images/nigeria.jpg" alt="Flag of Nigeria" style="width:520px;">
+      <img src="images/nigeria.jpg" style="width:520px;">
       <p>Nigeria, known as the Giant of Africa, is a diverse nation rich in culture, music, and natural resources. It is home to over 200 million people.</p>
     </section>
   </main>
