--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Dry Oar Rafting offers thrilling white water adventures and unforgettable river experiences.">
-<meta name="author" content="Emmanuel Benjamin">
-  <title>Contact Us | Dry Oar Rafting</title>
+  <meta name="description" content="Contact Dry Oar Rafting Adventures for bookings, inquiries, and trip information.">
+  <meta name="author" content="Emmanuel Benjamin">
+  <title>Contact – Dry Oar Rafting</title>
   <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
   <header>
-    <img src="images/logo.jpg" alt="Dry Oar Rafting Logo">
+    <img src="images/logo.png" alt="Dry Oar Rafting Logo">
     <nav>
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="trips.html">Trips</a>
       <a href="contact.html">Contact</a>
-      <a href="about.html">About</a>
     </nav>
   </header>
 
   <main>
     <section>
       <h1>Contact Us</h1>
-      <p>We’d love to hear from you! Fill out the form below or email us directly at <strong>info@dryoar.com</strong>.</p>
+      <p>We’d love to hear from you! Please fill out the form below to get in touch.</p>
 
       <form>
-        <label for="name">Full Name:</label>
+        <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
-        <label for="email">Email Address:</label>
+        <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
 
-        <label for="message">Your Message:</label>
+        <label for="message">Message:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
 
         <button type="submit">Send Message</button>
@@ -40,7 +40,12 @@
   </main>
 
   <footer>
-    <p>© 2025 Dry Oar Rafting Adventures | Designed by Emmanuel Benjamin</p>
+    <p>&copy; 2025 Dry Oar Rafting | Emmanuel Benjamin</p>
+    <div class="socialmedia">
+      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+    </div>
   </footer>
 </body>
 </html>
