--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Dry Oar Rafting offers thrilling white water adventures and unforgettable river experiences.">
-<meta name="author" content="Emmanuel Benjamin">
-
-  <title>Dry Oar Rafting Adventures</title>
+  <meta name="description" content="Welcome to Dry Oar Rafting Adventures – thrilling and safe rafting trips for families and friends.">
+  <meta name="author" content="Emmanuel Benjamin">
+  <title>Home – Dry Oar Rafting</title>
   <link rel="stylesheet" href="styles/rafting.css">
-
 </head>
 <body>
   <header>
-    <img src="images/logo.jpg" alt="Dry Oar Rafting Logo">
+    <img src="images/logo.png" alt="Dry Oar Rafting Logo">
     <nav>
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="trips.html">Trips</a>
       <a href="contact.html">Contact</a>
-      <a href="about.html">About</a>
     </nav>
   </header>
 
- <main>
-  <section class="hero">
-    <img src="images/hero.jpg" alt="Rafting adventure" class="hero-image">
-    <div class="hero-text">
-      <h1>Welcome to Dry Oar Rafting Adventures</h1>
+  <main>
+    <div class="hero">
+      <img src="images/hero.jpg" alt="Rafting adventure" class="hero-image">
+      <h1>Dry Oar Rafting Company</h1>
       <article>
         <h3>Rafting Excitement</h3>
         <p>Join us for an unforgettable rafting experience filled with thrill, laughter, and nature’s beauty. Whether you’re a first-timer or an experienced rafter, we’ve got something for everyone!</p>
       </article>
     </div>
-  </section>
-</main>
 
     <section>
-      <h2>Why Choose Us?</h2>
-      <p>We provide top-notch guides, premium equipment, and unbeatable safety standards. Our goal is to give you memories that will last a lifetime!</p>
+      <h2>Our Mission</h2>
+      <p>We bring people closer to nature through safe, exciting, and sustainable rafting adventures.</p>
     </section>
 
     <section>
-      <h2>Plan Your Adventure</h2>
-      <p>Choose from a variety of river adventures tailored for different skill levels and group sizes. Let’s make your next trip one to remember!</p>
+      <h2>Why Choose Us</h2>
+      <p>Experienced guides, beautiful rivers, and a passion for adventure — that’s what makes us stand out.</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Dry Oar Rafting Adventures | Designed by Emmanuel Benjamin</p>
+    <p>&copy; 2025 Dry Oar Rafting | Emmanuel Benjamin</p>
+    <div class="socialmedia">
+      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+    </div>
   </footer>
 </body>
 </html>
