--- a/index.html
+++ b/index.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to My WDD130 Website</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <meta name="description" content="WDD130 - Home Page by Emmanuel Benjamin. Explore web development projects including the Dry Oar Rafting website.">
+  <meta name="author" content="Emmanuel Benjamin">
+  <title>WDD130 Home Page – Emmanuel Benjamin</title>
+  <link rel="stylesheet" href="wwr/styles/rafting.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My WDD130 Website</h1>
+    <h1>Welcome to My WDD130 Home Page</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="wwr/index.html">WWR Site</a>
-      <a href="#">About Me</a>
+      <a href="index.html">Home</a>
+      <a href="wwr/index.html">Dry Oar Rafting Site</a>
+      <a href="wwr/about.html">About</a>
+      <a href="wwr/contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
     <section>
-      <img src="images/profile.jpg" style="width:600px;border-radius:60%;">
-      <h2>Hello! My name is Emmanuel</h2>
-      <p>This is my home page for the WDD130 Web Development course. Here you’ll find all my weekly projects, assignments, and practice work.</p>
+      <h2>About This Course</h2>
+      <p>This page was created for the BYU-Idaho WDD130 course. It demonstrates basic HTML, CSS, and website organization using the Dry Oar Rafting project.</p>
     </section>
 
     <section>
-      <h2>Course Content</h2>
-      <p>Use the navigation above to explore my weekly projects. Each folder contains the activities and assignments for that week.</p>
-    </section>
-
-    <section>
-      <h2>Nigeria</h2>
-      <img src="images/nigeria.jpg" style="width:520px;">
-      <p>Nigeria, known as the Giant of Africa, is a diverse nation rich in culture, music, and natural resources. It is home to over 200 million people.</p>
+      <h2>My Projects</h2>
+      <ul>
+        <li><a href="wwr/index.html">Dry Oar Rafting Website</a></li>
+      </ul>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Emmanuel Benjamin | WDD130 Course</p>
+    <p>&copy; 2025 | Emmanuel Benjamin | BYU-Idaho WDD130</p>
   </footer>
 </body>
 </html>
