--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Dry Oar Rafting offers thrilling white water adventures and unforgettable river experiences.">
-<meta name="author" content="Emmanuel Benjamin">
-  <title>About | Dry Oar Rafting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Learn more about Dry Oar Rafting Adventures and our passion for the river.">
+  <meta name="author" content="Emmanuel Benjamin">
+  <title>About Us – Dry Oar Rafting</title>
   <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
   <header>
-    <img src="images/logo.jpg" alt="Dry Oar Rafting Logo">
+    <img src="images/logo.png" alt="Dry Oar Rafting Logo">
     <nav>
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="trips.html">Trips</a>
       <a href="contact.html">Contact</a>
-      <a href="about.html">About</a>
     </nav>
   </header>
 
   <main>
-    <section>
+    <div class="hero">
+      <img src="images/about-hero.jpg" alt="Rafting group adventure">
       <h1>About Dry Oar Rafting</h1>
-      <p>Dry Oar Rafting Adventures was founded with one goal: to bring the excitement of whitewater rafting to everyone in a safe, fun, and memorable way.</p>
-      <p>We believe in teamwork, adventure, and connection with nature. Our certified guides have years of experience navigating rivers all around the world.</p>
+      <article>
+        <p>Founded in 1995, Dry Oar Rafting has been leading safe and exciting rafting adventures across the most beautiful rivers in the country. Our mission is to share our passion for nature and adventure with every guest.</p>
+      </article>
+    </div>
+
+    <section>
+      <h2>Our Story</h2>
+      <p>We started as a small group of river lovers and turned it into one of the most trusted rafting companies. Safety, fun, and nature are our top priorities.</p>
     </section>
 
     <section>
-      <h2>Our Mission</h2>
-      <p>To create lasting memories and foster a love for adventure, all while ensuring the highest safety standards and environmental respect.</p>
+      <h2>Our Promise</h2>
+      <p>At Dry Oar, we promise unforgettable experiences, professional guides, and a deep respect for the environment.</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Dry Oar Rafting Adventures | Designed by Emmanuel Benjamin</p>
+    <p>&copy; 2025 Dry Oar Rafting | Emmanuel Benjamin</p>
+    <div class="socialmedia">
+      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+    </div>
   </footer>
 </body>
 </html>
