--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Emmanuel Benjamin">
   <title>WDD130 Home Page – Emmanuel Benjamin</title>
   <link rel="stylesheet" href="wwr/styles/rafting.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <header>
@@ -33,8 +34,21 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 | Emmanuel Benjamin | BYU-Idaho WDD130</p>
-  </footer>
+ <footer>
+    <p>© 2025 Your Name | WDD130</p>
+
+    <div class="social-icons">
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="Facebook">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="Twitter">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="Instagram">
+        </a>
+    </div>
+</footer>
+
 </body>
 </html>
