--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,12 +21,13 @@
 
   <main>
     <div class="hero">
-      <img src="images/about-hero.jpg" alt="Rafting group adventure">
-      <h1>About Dry Oar Rafting</h1>
-      <article>
-        <p>Founded in 1995, Dry Oar Rafting has been leading safe and exciting rafting adventures across the most beautiful rivers in the country. Our mission is to share our passion for nature and adventure with every guest.</p>
-      </article>
-    </div>
+  <img src="images/about-hero.jpg" alt="Rafting adventure on the river">
+  <h1>About Dry Oar Rafting</h1>
+  <article>
+    <p>We love the thrill of the rapids and the peace of the calm stretches. Our guides are passionate about sharing the river with others.</p>
+  </article>
+</div>
+
 
     <section>
       <h2>Our Story</h2>
