--- a/index.html
+++ b/index.html
@@ -34,21 +34,13 @@
     </section>
   </main>
 
- <footer>
-    <p>© 2025 Your Name | WDD130</p>
-
-    <div class="social-icons">
-        <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="Facebook">
-        </a>
-        <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter.png" alt="Twitter">
-        </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram.png" alt="Instagram">
-        </a>
+<footer>
+    <p>&copy; 2025 Dry Oar Rafting | Emmanuel Benjamin</p>
+    <div class="socialmedia">
+      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
     </div>
-</footer>
 
 </body>
 </html>
