--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
       <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
     </div>
+  </footer>
 
 </body>
 </html>
