--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="WDD130 - Home Page by Emmanuel Benjamin. Explore web development projects including the Dry Oar Rafting website.">
   <meta name="author" content="Emmanuel Benjamin">
+  <meta name="description" content="WDD130 - Home Page by Emmanuel Benjamin. Explore web development projects including the Dry Oar Rafting website.">
   <title>WDD130 Home Page – Emmanuel Benjamin</title>
-  <link rel="stylesheet" href="wwr/styles/rafting.css">
   <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
   <header>
-    <h1>Welcome to My WDD130 Home Page</h1>
+    <img src="images/byui-logo.png" alt="BYU–Idaho logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="wwr/index.html">Dry Oar Rafting Site</a>
@@ -21,27 +21,24 @@
   </header>
 
   <main>
-    <section>
-      <h2>About This Course</h2>
-      <p>This page was created for the BYU-Idaho WDD130 course. It demonstrates basic HTML, CSS, and website organization using the Dry Oar Rafting project.</p>
-    </section>
-
-    <section>
-      <h2>My Projects</h2>
-      <ul>
-        <li><a href="wwr/index.html">Dry Oar Rafting Website</a></li>
-      </ul>
-    </section>
+    <h1>Welcome to My WDD130 Home Page – Emmanuel Benjamin</h1>
+    <img src="images/profile.jpg" alt="Profile picture of Emmanuel Benjamin">
+    <p>Hello! I’m Emmanuel Benjamin, a web development student at BYU–Idaho. This page showcases my projects and learning progress in WDD130.</p>
   </main>
 
-<footer>
-    <p>&copy; 2025 Dry Oar Rafting | Emmanuel Benjamin</p>
-    <div class="socialmedia">
+  <aside>
+    <h2>Nigeria</h2>
+    <img src="images/nigeria.jpg" alt="Scenic view of Nigeria">
+    <p>Nigeria is a beautiful country known for its culture, resilience, and innovation. It inspires my creativity and web design goals.</p>
+  </aside>
+
+  <footer>
+    <p>© 2025 Emmanuel Benjamin – Nigeria</p>
+    <div class="social">
       <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
       <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
       <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
     </div>
   </footer>
-
 </body>
 </html>
