--- a/index.html
+++ b/index.html
@@ -33,12 +33,19 @@
   </aside>
 
   <footer>
-    <p>© 2025 Emmanuel Benjamin – Nigeria</p>
-    <div class="social">
-      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
-    </div>
-  </footer>
+  <p>© 2025 Emmanuel Benjamin – Nigeria</p>
+  <div class="social">
+    <a href="https://facebook.com/https://www.facebook.com/share/1FYkFV9f7v/" target="_blank">
+      <img src="images/facebook.png" alt="Facebook">
+    </a>
+    <a href="https://twitter.com/https://twitter.com/TaylorSwift13" target="_blank">
+      <img src="images/twitter.png" alt="Twitter">
+    </a>
+    <a href="https://instagram.com/https://www.instagram.com/beyonce/" target="_blank">
+      <img src="images/instagram.png" alt="Instagram">
+    </a>
+  </div>
+</footer>
+
 </body>
 </html>
